# pyhub-mcptools

./: .editorconfig  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  apple-mail-send-implementation.md  apple-mcp-implementation-summary.md  docker-compose.yml  email-tools-refactoring.md  manage.py  mcp-tools-analysis.md  mkdocs.yml  outlook-improvements-applied.md  outlook-improvements.md  outlook-macos-implementation-complete.md  outlook-macos-implementation-plan.md  pyinstaller_hooks.py  pyproject.toml  requirements-build.txt  setup-command-improvement.md
.claude/: settings.local.json
.github/workflows/: publish.yml  release.yml  test.yml
docker/: entrypoint.sh
docs/: PRIVACY.md  google-sheets.md  index.md  privacy.md  release-notes.md  robots.txt  terms.md
docs/excel/: index.md
docs/mcptools/: index.md
docs/mcptools/apple/: index.md
docs/mcptools/excel/: index.md
docs/mcptools/fs/: index.md
docs/mcptools/hometax/: index.md
docs/mcptools/maps/: index.md
docs/mcptools/microsoft/: index.md
docs/mcptools/python/: index.md  session-management.md
docs/mcptools/search/: index.md  perplexity.md
docs/mcptools/sentiment/: index.md
docs/mcptools/shopping/: index.md
docs/recipes/: index.md
docs/recipes/excel/: index.md
docs/recipes/excel/01-basic/: index.md
docs/recipes/excel/02-bmi/: index.md
docs/recipes/excel/03-auto-formula/: index.md
docs/recipes/excel/03-auto-formula/assets/: recipes-excel-04.xlsx
docs/recipes/excel/03-pivot-table/: index.md
docs/recipes/excel/04-pivot-table/: index.md
docs/recipes/excel/04-pivot-table/assets/: pyhub-mcptools-recipes-03-pivot-table.xlsx
docs/recipes/excel/05-vlookup/: index.md
docs/recipes/excel/05-vlookup/assets/: recipes-excel-05-vlookup.xlsx
docs/setup/: env.md  index.md
docs/setup/cursor/: index.md
docs/setup/env/: index.md
docs/setup/macos/: index.md
docs/setup/rabbitmq/: index.md
docs/setup/sse/: index.md
docs/setup/windows/: index.md
docs/stylesheets/: extra.css
overrides/partials/: comments.html
plugins/local_social/: __init__.py  plugin.py
pyhub/mcp_tools/: conftest.py
pyhub/mcp_tools/core/: cli.py
pyhub/mcp_tools/core/tests/: test_cache.py
pyhub/mcp_tools/excel/tests/: test_types.py
pyhub/mcp_tools/setup/: __main__.py  utils.py
pyhub/mcptools/: __init__.py  __main__.py  conftest.py
pyhub/mcptools/apple/: __init__.py  tools.py
pyhub/mcptools/apple/tests/: __init__.py  test_apple_tools.py
pyhub/mcptools/browser/: test_tools.py
pyhub/mcptools/core/: celery.py  choices.py  cli.py  fastmcp.py  init.py  q2.py  security.py  settings.py  types.py  updater.py  validators.py
pyhub/mcptools/core/tests/: test_core.py  test_fields.py  test_sidebar.py
pyhub/mcptools/core/utils/: __init__.py  process.py
pyhub/mcptools/email/: tools.py  types.py  utils.py
pyhub/mcptools/email/apple_mail/: __init__.py
pyhub/mcptools/email/outlook/: __init__.py  macos.py  win.py
pyhub/mcptools/email/outlook/templates/: send_email.applescript
pyhub/mcptools/excel/: forms.py  tasks.py  tools.py  types.py  utils.py
pyhub/mcptools/excel/tasks/: charts.py  sheets.py  tables.py  test_sheets.py
pyhub/mcptools/excel/templates/excel/: pivot_table_create.applescript
pyhub/mcptools/excel/tests/: test_forms.py  test_tools.py  test_types.py  test_utils.py
pyhub/mcptools/excel/tools/: charts.py  sheets.py  tables.py
pyhub/mcptools/excel/utils/: __init__.py  tables.py
pyhub/mcptools/files/: __init__.py  __main__.py  core.py
pyhub/mcptools/files/tests/: __init__.py  test_core.py  test_excel.py  test_excel_integration.py  test_open.py
pyhub/mcptools/files/tools/: __init__.py  excel.py  open.py
pyhub/mcptools/fs/: __init__.py  core.py  tools.py  utils.py
pyhub/mcptools/fs/tests/: test_tools.py
pyhub/mcptools/google/: __init__.py  __main__.py  cli_commands.py  tools.py
pyhub/mcptools/google/auth/: __init__.py  base.py  credentials.py  scopes.py
pyhub/mcptools/google/gmail/: __init__.py  auth.py  client_async.py  constants.py  exceptions.py
pyhub/mcptools/google/gmail/tools/: __init__.py  labels.py  messages.py  search.py
pyhub/mcptools/google/sheets/: __init__.py  auth.py  client_async.py  constants.py  desktop_auth.py  drive_async.py  exceptions.py  utils.py
pyhub/mcptools/google/sheets/data/: README.md
pyhub/mcptools/google/sheets/docs/: cli.md
pyhub/mcptools/google/sheets/tests/: README.md  __init__.py  conftest.py  test_basic_operations.py  test_batch_operations.py  test_cli.py  test_error_handling.py  test_google_sheets_tools.py.backup  test_integration.py  test_unit.py
pyhub/mcptools/google/sheets/tools/: __init__.py  sheets.py  sheets_batch.py  sheets_chunked.py
pyhub/mcptools/google/sheets/utils/: __init__.py  converters.py  ranges.py
pyhub/mcptools/images/: test_base64_convert.py
pyhub/mcptools/microsoft/: tools.py
pyhub/mcptools/microsoft/excel/: exceptions.py
pyhub/mcptools/microsoft/excel/com/: README.md  REQUIREMENTS.md  __init__.py  compat.py  decorators.py  excel.py  pool.py  thread_safety.py  utils.py
pyhub/mcptools/microsoft/excel/tasks/: __init__.py  charts.py  sheets.py  tables.py  tables.py.bak  test_sheets.py
pyhub/mcptools/microsoft/excel/tests/: conftest.py  test_com_mock.py  test_com_stability.py  test_forms.py  test_tools_set_styles.py  test_utils.py
pyhub/mcptools/microsoft/excel/tools/: charts.py  sheets.py  tables.py
pyhub/mcptools/microsoft/excel/utils/: __init__.py
pyhub/mcptools/microsoft/outlook/: test_tools.py  tools.py
pyhub/mcptools/python/: __init__.py  test_sandbox.py  tools.py
pyhub/mcptools/python/tests/: test_sandbox.py  test_session.py
pyhub/mcptools/sentiment/: tools.py
pyhub/mcptools/sentiment/tests/: __init__.py  test_sentiment.py  test_tools.py
pyinstaller_hooks/: __init__.py  hook-django.py  hook-general-locale.py  hook-sentiment.py
scripts/: analyze_build_size.py  download-fonts.ps1  download-fonts.sh  install.ps1  install.sh
test_mcp/: client.py  server.py  t_ollama_1.py
