[project]
name = "pyhub-mcptools"
version = "0.6.4"
description = "파이썬사랑방 MCP 도구"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Chinseok Lee", email = "me@pyhub.kr"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
    "Topic :: Office/Business :: Office Suites",
]
dependencies = [
    "django>=4.0",
    "django-environ",
    "mcp",
    "typer",
    "tzlocal",
    "psutil",
]

[project.optional-dependencies]
browser = [
    "bs4",
    "httpx",
    "playwright",
]
excel = [
    "xlwings",
]
all = [
    "pyhub-mcptools[excel,browser]",
]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-httpx",
    "black",
    "isort",
    "mypy",
    "ruff",
    "djlint",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.1.0",
    "mkdocstrings>=0.20.0",
    "mkdocstrings-python>=1.0.0",
]
build = ["setuptools", "wheel", "build", "twine"]

[project.urls]
Homepage = "https://github.com/pyhub-kr/pyhub-mcptools"
Documentation = "https://pyhub-kr.github.io/pyhub-mcptools"
"Bug Tracker" = "https://github.com/pyhub-kr/pyhub-mcptools/issues"
"Source Code" = "https://github.com/pyhub-kr/pyhub-mcptools"

[project.scripts]
"pyhub.mcptools" = "pyhub.mcptools.__main__:app"
"pyhub.mcptools.browser" = "pyhub.mcptools.browser.__main__:app"
"pyhub.mcptools.excel" = "pyhub.mcptools.excel.__main__:app"
"pyhub.mcptools.setup" = "pyhub.mcptools.setup.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyhub"]
exclude = ["**/__pycache__", "**/.DS_Store", "**/conftest.py", "**/tests/", "**/test_*.py"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.lint]
ignore = ["B008"]  # Typer 사용 시 함수 호출 기본값 허용

[tool.djlint]
profile = "django"
indent = 2

[tool.pytest.ini_options]
testpaths = ["pyhub"]
python_files = "test_*.py"
asyncio_mode = "auto"  # Enable asyncio mode
asyncio_default_fixture_loop_scope = "function"  # Set default fixture loop scope
markers = [
    "asyncio: mark test as an asyncio test",
]
